// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validation 1`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.test should be one of these:
   RegExp | string | [RegExp | string, ...]
   Details:
    * configuration.test should be one of these:
      RegExp | string
      Details:
       * configuration.test should be an instance of RegExp.
       * configuration.test should be a string.
    * configuration.test should be an array:
      [RegExp | string, ...]"
`;

exports[`validation 2`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.test should be one of these:
   RegExp | string | [RegExp | string, ...]
   Details:
    * configuration.test[0] should be one of these:
      RegExp | string
      Details:
       * configuration.test[0] should be an instance of RegExp.
       * configuration.test[0] should be a string."
`;

exports[`validation 3`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.test should be one of these:
   RegExp | string | [RegExp | string, ...]
   Details:
    * configuration.test[2] should be one of these:
      RegExp | string
      Details:
       * configuration.test[2] should be an instance of RegExp.
       * configuration.test[2] should be a string."
`;

exports[`validation 4`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.include should be one of these:
   RegExp | string | [RegExp | string, ...]
   Details:
    * configuration.include should be one of these:
      RegExp | string
      Details:
       * configuration.include should be an instance of RegExp.
       * configuration.include should be a string.
    * configuration.include should be an array:
      [RegExp | string, ...]"
`;

exports[`validation 5`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.include should be one of these:
   RegExp | string | [RegExp | string, ...]
   Details:
    * configuration.include[0] should be one of these:
      RegExp | string
      Details:
       * configuration.include[0] should be an instance of RegExp.
       * configuration.include[0] should be a string."
`;

exports[`validation 6`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.include should be one of these:
   RegExp | string | [RegExp | string, ...]
   Details:
    * configuration.include[2] should be one of these:
      RegExp | string
      Details:
       * configuration.include[2] should be an instance of RegExp.
       * configuration.include[2] should be a string."
`;

exports[`validation 7`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.exclude should be one of these:
   RegExp | string | [RegExp | string, ...]
   Details:
    * configuration.exclude should be one of these:
      RegExp | string
      Details:
       * configuration.exclude should be an instance of RegExp.
       * configuration.exclude should be a string.
    * configuration.exclude should be an array:
      [RegExp | string, ...]"
`;

exports[`validation 8`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.exclude should be one of these:
   RegExp | string | [RegExp | string, ...]
   Details:
    * configuration.exclude[0] should be one of these:
      RegExp | string
      Details:
       * configuration.exclude[0] should be an instance of RegExp.
       * configuration.exclude[0] should be a string."
`;

exports[`validation 9`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.exclude should be one of these:
   RegExp | string | [RegExp | string, ...]
   Details:
    * configuration.exclude[2] should be one of these:
      RegExp | string
      Details:
       * configuration.exclude[2] should be an instance of RegExp.
       * configuration.exclude[2] should be a string."
`;

exports[`validation 10`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.cache should be one of these:
   boolean | string
   Details:
    * configuration.cache should be a boolean.
    * configuration.cache should be a string."
`;

exports[`validation 11`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.filename should be one of these:
   string | function
   Details:
    * configuration.filename should be a string.
    * configuration.filename should be an instance of function."
`;

exports[`validation 12`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.algorithm should be one of these:
   string | function
   Details:
    * configuration.algorithm should be a string.
    * configuration.algorithm should be an instance of function."
`;

exports[`validation 13`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.compressionOptions should be an object:
   object { … }"
`;

exports[`validation 14`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.threshold should be a number."
`;

exports[`validation 15`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.minRatio should be a number."
`;

exports[`validation 16`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration.deleteOriginalAssets should be a boolean."
`;

exports[`validation 17`] = `
"Invalid configuration object. Object has been initialised using a configuration object that does not match the API schema.
 - configuration has an unknown property 'unknown'. These properties are valid:
   object { test?, include?, exclude?, cache?, filename?, algorithm?, compressionOptions?, threshold?, minRatio?, deleteOriginalAssets? }"
`;
